@@ -27,6 +27,7 @@
 ###############################################################################
 
 2004/03/29 Mikael Barbeaux
+	* Implemented  checkLogin method from UserLogIn bean.
 	* Started to implemented UserLogIn action.
 	* Wrote UserWrongPassword and UserInactive exceptions.
 
